[package]
name = "edwloef_plugins"
version = "0.0.0"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
	"audio-ports",
	"clack-plugin",
	"params",
	"state",
] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
fastrand = "2.4.1"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"

nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
suboptimal_flops = "allow"

allow_attributes = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
string_lit_chars_any = "warn"
str_to_string = "warn"
try_err = "warn"
unused_trait_names = "warn"

dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"

multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"

[profile.release]
lto = true
codegen-units = 1
